# GLO

./: .clang-format  CMakeLists.txt  CMakeLists_ros1.txt  CMakeLists_ros2.txt  README.md  package_ros1.xml
launch/: grodom_NTU.launch  grodom_RS16.launch  grodom_kitti.launch  grodom_mid360.launch
params/: 3DSLAM_NTU.yaml  3DSLAM_RS16.yaml  3DSLAM_kitti.yaml  3DSLAM_mid360.yaml
ros1_adapter/: CMakeLists.txt  grslam_ros1.cpp  grslam_ros1.hpp  package.xml
ros2_adapter/: grslam_ros2.cpp  grslam_ros2.hpp  package.xml
rviz/: grodom_rviz.rviz
slam_core/: CMakeLists.txt
slam_core/common/: ceres_factor.hpp  kitti.hpp  pose_graph_error_term.hpp
slam_core/common/config/: system_config.cpp  system_config.hpp
slam_core/common/data_struct/: keyframe.cpp  keyframe.hpp  pc_base.hpp  sensors_type.hpp  space_voxel.hpp
slam_core/common/debug_tools/: debug_color.h  tic_toc.h
slam_core/common/iPvox/: eigen_types.h  iPvox.h  iPvox_node.hpp
slam_core/common/math_base/: slam_math.hpp  slam_transform.hpp
slam_core/common/metric/: CPUMetric.h  MemoryMetric.h
slam_core/frontend/: base_feature_extractor.hpp  feature_extract_factory.hpp  feature_extractor.cpp  feature_extractor.hpp
slam_core/lidar_odom/: lidar_odom.cpp  lidar_odom.hpp
slam_core/load_params/: load_params.cpp  load_params.hpp
slam_core/map_track/: map_track.cpp  map_track.hpp
slam_core/system/: system.cpp  system.hpp
start/: start.bash
